# dfdx-qlearning

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/checkers/: main.rs
examples/connectfour/: main.rs
examples/tictactoe/: main.rs  play.rs  train.rs
models/: connectfour.npz  tictactoe.npz
src/: abstract_model.rs  actor.rs  game_logger.rs  lib.rs
