[package]
name = "dfdx-qlearning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { version = "0.13.0", features = ["numpy"] }
multimap = "0.10.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
egui = "0.27.2"
eframe = "0.27.2"
googletest = "0.11.0"
itertools = "0.13.0"
plotly = { version = "0.8.4", features = ["ndarray", "plotly_ndarray"] }
rstest = "0.21.0"

[[example]]
name = "tictactoe"
crate-type = ["bin"]
